tests/miniJava/neg/004277_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { if int [] java ; }
